last few python3-isms

--- a/monitoring_broker/status_scraper.cfg
+++ b/monitoring_broker/status_scraper.cfg
@@ -47,7 +47,7 @@ percent=100
 description=area has space, warn at 80%% bad at 90%%
 scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
 multiline = True
-scrape_regex = (?s)</tr>.<tr>.<td>.<a[^>]*>chips<.*?> *(\d*)\d\.\d\d.*?</tr>
+#scrape_regex = (?s)</tr>.<tr>.<td>.<a[^>]*>chips<.*?> *(\d*)\d\.\d\d.*?</tr>
 scrape_regex = (?s)</tr>.<tr.*?>chips<.*?>([ \d])\d*\.\d\d.*?</tr>
 scrape_bad_match_1 = 9
 scrape_warn_match_1 = 8
