Must be valid Python

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -9,7 +9,7 @@ server.socket_host = '0.0.0.0'
 server.socket_port = 8080
 server.thread_pool = 20
 
-engine.autoreload.on = False	    ; Recommended
+engine.autoreload.on = False	    # Recommended
 
 request.show_tracebacks = True
 
