--- a/test/pytest.ini
+++ b/test/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
 testpaths = ../fts_broker ../job_broker ../model ../monitoring_broker ../webservice .
 #addopts = --doctest-modules --ignore=../webservice/uwsgi-service.py --ignore=test_dashboard.py
-addopts = --ignore=../webservice/uwsgi-service.py --ignore=test_dashboard.py --ignore=poms/*
+addopts = --ignore=../webservice/uwsgi-service.py --ignore=test_dashboard.py --ignore=poms/* --ignore ../job_broker/poms_client/bin/test_pipe.py
+
