--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -13,6 +13,8 @@ engine.autoreload.on = False	    # Recommended
 
 request.show_tracebacks = True
 
+standalone_test_user = 'mengel'
+
 #
 # Custom vars
 #
