fun with current_experimenter, fifemon_reader.cfg still pointed at lbne sam

--- a/monitoring_broker/fifemon_reader.cfg
+++ b/monitoring_broker/fifemon_reader.cfg
@@ -68,7 +68,7 @@ below=201
 [service fifemon_dune_samweb]
 description=SAMWeb HTTP Status (should be 200)  for dune, 
 source_url=https://fifemon.fnal.gov/monitor/dashboard/db/sam-by-experiment?var-experiment=dune
-path=urls.lbne-prd-samweb-lbne.http-code
+path=urls.dune-prd-samweb-lbne.http-code
 below=201
 
 [service fifemon_lar1nd_samweb]
