kibana link added, modifiable in config file

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -16,6 +16,14 @@ request.show_tracebacks = True
 standalone_test_user = 'mengel'
 
 #
+# the percents are a bit silly here, but the config expands %s formats
+# so we need to double them in the config, and then we're going to use
+# it *as* a format, so we doulbe the ones again that are in the url (i.e.
+# the %20 for spaces -> %%%%20 -> %%20 -> %20 in two rounds of format
+# expansion.
+campaign_kibana_link_format = "https://fifemon.fnal.gov/kibana/app/kibana#/visualize/edit/Job-memory-statistics?_g=(refreshInterval:(display:Off,pause:!f,value:0),time:(from:now-30d,mode:quick,to:now))&_a=(filters:!(),linked:!f,query:(query_string:(analyze_wildcard:!t,lowercase_expanded_terms:!f,query:'env.POMS_TASK_ID:%%s')),uiState:(vis:(params:(sort:(columnIndex:0,direction:!n)))),vis:(aggs:!((enabled:!t,id:'1',params:(),schema:metric,type:count),(enabled:!t,id:'2',params:(field:RequestMemory,order:desc,orderBy:_term,size:20),schema:bucket,type:terms),(enabled:!t,id:'3',params:(field:memory_requested),schema:metric,type:max),(enabled:!t,id:'4',params:(field:memory_usage),schema:metric,type:min),(enabled:!t,id:'5',params:(field:memory_usage),schema:metric,type:avg),(enabled:!t,id:'6',params:(field:memory_usage),schema:metric,type:max)),listeners:(),params:(perPage:10,showMeticsAtAllLevels:!f,showPartialRows:!f,showTotal:!f,sort:(columnIndex:!n,direction:!n),totalFunc:sum),title:'Job%%%%20memory%%%%20statistics',type:table))"
+
+#
 # Custom vars
 #
 pomspath='/poms'
