now with working AJAX callbacks for pending and efficiency

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -7,7 +7,7 @@ log.error_file = ""
 #server.socket_host = '127.0.0.1'
 server.socket_host = '0.0.0.0'
 server.socket_port = 8080
-server.thread_pool = 20
+server.thread_pool = 30
 
 engine.autoreload.on = False	    # Recommended
 
@@ -36,11 +36,16 @@ elasticsearch_cert = %(HOME)s + "/.test_proxy"
 elasticsearch_key = %(HOME)s + "/.test_proxy"
 
 [Databases]
+# Dev
 db="pomsdev"
 dbuser="pomsdbs"
 dbhost="ifdbdev.fnal.gov"
 dbport=5447
-
+# Production
+#db="pomsprd"
+#dbhost="ifdbprod.fnal.gov"
+#dbport=5446
+#dbuser="pomsdbs"
 
 [POMS]
 log_level="DEBUG"      #CRITICAL, ERROR, WARNING, INFO (default), DEBUG, NOTSET
