--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -41,7 +41,7 @@ db="pomsdev"
 dbuser="pomsdbs"
 dbhost="ifdbdev.fnal.gov"
 dbport=5447
-# Production
+## Production
 #db="pomsprd"
 #dbhost="ifdbprod.fnal.gov"
 #dbport=5446
