also defer data to AJAX callbacks in campaign_info page

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -37,15 +37,15 @@ elasticsearch_key = %(HOME)s + "/.test_proxy"
 
 [Databases]
 # Dev
-db="pomsdev"
-dbuser="pomsdbs"
-dbhost="ifdbdev.fnal.gov"
-dbport=5447
+#db="pomsdev"
+#buser="pomsdbs"
+#bhost="ifdbdev.fnal.gov"
+#bport=5447
 ## Production
-#db="pomsprd"
-#dbhost="ifdbprod.fnal.gov"
-#dbport=5446
-#dbuser="pomsdbs"
+db="pomsprd"
+dbhost="ifdbprod.fnal.gov"
+dbport=5446
+dbuser="pomsdbs"
 #
 [POMS]
 log_level="DEBUG"      #CRITICAL, ERROR, WARNING, INFO (default), DEBUG, NOTSET
