--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -38,9 +38,9 @@ elasticsearch_key = %(HOME)s + "/.test_proxy"
 [Databases]
 # Dev
 db="pomsdev"
-buser="pomsdbs"
-bhost="ifdbdev.fnal.gov"
-bport=5447
+dbuser="pomsdbs"
+dbhost="ifdbdev.fnal.gov"
+dbport=5447
 ## Production
 #db="pomsprd"
 #dbhost="ifdbprod.fnal.gov"
