Revert back to memory sessions

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -61,10 +61,10 @@ tools.gzip.on: True
 tools.db.on: True
 tools.psess.on: True
 tools.sessions.on: True
-tools.sessions.timeout: 60
-tools.sessions.storage_type: 'file'
-tools.sessions.locking: 'explicit'
-tools.sessions.storage_path: '/tmp/poms_sessions'
+###tools.sessions.timeout: 60
+###tools.sessions.storage_type: 'file'                  # Revert to memory sessions
+###tools.sessions.locking: 'explicit'
+###tools.sessions.storage_path: '/tmp/poms_sessions'
 
 [/static]
 tools.staticdir.on = True
