--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -62,9 +62,10 @@ tools.db.on: True
 tools.psess.on: True
 tools.sessions.on: True
 tools.sessions.timeout: 60
-tools.sessions.storage_type: 'file'
+tools.sessions.storage_type: 'ram'
 tools.sessions.locking: 'explicit'
-tools.sessions.storage_path: '/tmp/poms_sessions'
+#tools.sessions.storage_type: 'file'
+#tools.sessions.storage_path: '/tmp/poms_sessions'
 
 [/static]
 tools.staticdir.on = True
