Add tool for jinja globals init

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -62,6 +62,7 @@ tools.gzip.on: True
 tools.db.on: True
 tools.psess.on: True
 tools.sessions.on: True
+tools.augment_params.on: True
 ###tools.sessions.timeout: 60
 ###tools.sessions.storage_type: 'file'                  # Revert to memory sessions
 ###tools.sessions.locking: 'explicit'
