first rewrite of wrapup_tasks to get rid of tasks*jobs*campaign_layers query

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -62,10 +62,9 @@ tools.db.on: True
 tools.psess.on: True
 tools.sessions.on: True
 tools.augment_params.on: True
-###tools.sessions.timeout: 60
-###tools.sessions.storage_type: 'file'                  # Revert to memory sessions
-###tools.sessions.locking: 'explicit'
-###tools.sessions.storage_path: '/tmp/poms_sessions'
+tools.sessions.storage_type: 'ram' 
+tools.sessions.timeout: 60
+tools.sessions.locking: 'explicit'
 
 [/static]
 tools.staticdir.on = True
