--- a/job_broker/poms_client/bin/client.cfg
+++ b/job_broker/poms_client/bin/client.cfg
@@ -1,6 +1,7 @@
 [url]
-base_dev=http://fermicloud045.fnal.gov:8080/poms/
+#base_dev=http://fermicloud045.fnal.gov:8080/poms/
+base_dev=https://fermicloud045.fnal.gov:8443/poms/
 base_dev_ssl=https://fermicloud045.fnal.gov:8443/poms/
-base_prod=http://pomsgpvm01.fnal.gov:8080/poms/
+base_prod=https://pomsgpvm01.fnal.gov:8443/poms/
 [future]
 var1="for the future"
