poms_jobsub_wrapper updates, improved debug messages, skipping queries for empty task lists round 1

--- a/monitoring_broker/fifemon_reader.cfg
+++ b/monitoring_broker/fifemon_reader.cfg
@@ -1,7 +1,8 @@
 [global]
 debug=0
 passwdcfg=fifemon_passwd.ini
-fifemon_url=https://fifemon.fnal.gov/monitor
+#fifemon_url=https://fifemon.fnal.gov/monitor
+fifemon_url=https://fifemon.fnal.gov/
 
 [service All]
 description = Bundle of all services we watch 
