Adjust kibana plots URL

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -21,7 +21,7 @@ standalone_test_user = 'mengel'
 # it *as* a format, so we doulbe the ones again that are in the url (i.e.
 # the %20 for spaces -> %%%%20 -> %%20 -> %20 in two rounds of format
 # expansion.
-campaign_kibana_link_format = "https://fifemon-pp.fnal.gov/dashboard/db/poms-campaign-stats?orgId=1&from=now-30d&to=now&var-Campaign={}"
+campaign_kibana_link_format = "https://fifemon.fnal.gov/monitor/dashboard/db/poms-campaign-stats?orgId=1&from=now-30d&to=now&var-Campaign={}"
 
 #
 # Custom vars
