finish up issue #18704

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ packages = find:
 setup_requires = pytest-runner
 zip_safe = False
 install_requires = 
+    braceexpand
     psycopg2
     cherrypy
     sqlalchemy
