test_JobsPOMS.py

--- a/test/pytest.ini
+++ b/test/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-testpaths = ../fts_broker ../job_broker ../monitoring_broker ../webservice .
+testpaths = ../submission_broker ../webservice .
 #addopts = --doctest-modules --ignore=../webservice/uwsgi-service.py --ignore=test_dashboard.py
 addopts = --ignore=../webservice/uwsgi-service.py --ignore=test_dashboard.py --ignore=poms/* --ignore ../job_broker/poms_client/bin/test_pipe.py
 
