file upload/download

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -9,6 +9,9 @@ server.socket_host = '0.0.0.0'
 server.socket_port = 8080
 server.thread_pool = 30
 
+base_uploads_dir = '/scratch/mengel/uploads'
+base_uploads_quota = 10485760
+
 engine.autoreload.on = False	    # Recommended
 
 request.show_tracebacks = True
