--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -16,7 +16,7 @@ engine.autoreload.on = False	    # Recommended
 
 request.show_tracebacks = True
 
-standalone_test_user = 'mengel'
+standalone_test_user = 'poms'
 
 #
 # the percents are a bit silly here, but the config expands %s formats
