--- a/webservice/static/samples/sample_reco.ini
+++ b/webservice/static/samples/sample_reco.ini
@@ -1,6 +1,6 @@
 [campaign]
 experiment=sample
-name=samples/sample_reco
+name=samples/sample_reco.ini
 campaign_stage_list=sample_reco,sample_anatree
 
 [campaign_stage sample_reco]
