--- a/webservice/static/samples/generic_analysis.ini
+++ b/webservice/static/samples/generic_analysis.ini
@@ -1,7 +1,7 @@
 [campaign]
 experiment=sample
 poms_role=analysis
-name=samples/generic_analysis
+name=samples/generic_analysis.ini
 state=Active
 campaign_stage_list=analyze
 
