--- a/webservice/static/samples/sample_mc.ini
+++ b/webservice/static/samples/sample_mc.ini
@@ -1,6 +1,6 @@
 [campaign]
 experiment=sample
-name=samples/sample_mc.ini
+name=sample
 campaign_stage_list=sample_gen,sample_g4,sample_detsim,sample_reco,sample_anatree
 
 [campaign_stage sample_gen]
