When you have a tarfile you often need to restrict the OS to what flavor you built in your tarfile

--- a/webservice/static/samples/analysis_generator.ini
+++ b/webservice/static/samples/analysis_generator.ini
@@ -18,7 +18,7 @@ login_setup=generic_analysis_launch
 job_type=analysis_generator
 
 [campaign_stage generate]
-param_overrides=[["-Oglobal.fclfile=", "my.fcl"], ["-Oglobal.dest=", "/pnfs/%(experiment)s/scratch/users/%(experimenter)/%(version)s/generate"], ["-Oglobal.release=", "%(version)s"], ["-Oglobal.experiment=", "hypot"], ["-Oglobal.quals=", "e17:prof"], ["-Oglobal.exp_sw=", "hypotcode"], ["-Osubmit.N=", "10"], ["-Oglobal.nevents=", "10"], ["-Oglobal.first_run=", "200"], ["-Osubmit.tar_file_name=", ""]]
+param_overrides=[["-Oglobal.fclfile=", "my.fcl"], ["-Oglobal.dest=", "/pnfs/%(experiment)s/scratch/users/%(experimenter)/%(version)s/generate"], ["-Oglobal.release=", "%(version)s"], ["-Oglobal.experiment=", "hypot"], ["-Oglobal.quals=", "e17:prof"], ["-Oglobal.exp_sw=", "hypotcode"], ["-Osubmit.OS=", "SL7"], ["-Osubmit.N=", "10"], ["-Oglobal.nevents=", "10"], ["-Oglobal.first_run=", "200"], ["-Osubmit.tar_file_name=", ""]]
 
 [login_setup generic_analysis_launch]
 host=pomsgpvm01.fnal.gov
