refactoring wrapup_tasks, starting moving SAM specific code to SAMSpecifics.py

--- a/webservice/static/samples/analysis_generator.ini
+++ b/webservice/static/samples/analysis_generator.ini
@@ -7,7 +7,7 @@ campaign_stage_list=generate
 
 [campaign_defaults]
 vo_role=Analysis
-software_version=v1_0
+software_version=v1_2
 dataset_or_split_data=None
 cs_split_type=None
 completion_type=located
@@ -18,12 +18,12 @@ login_setup=generic_analysis_launch
 job_type=analysis_generator
 
 [campaign_stage generate]
-param_overrides=[["-Oglobal.fclfile=", "my.fcl"], ["-Oglobal.dest=", "/pnfs/%(experiment)s/scratch/users/%(experimenter)/%(version)s/generate"], ["-Oglobal.release=", "%(version)s"], ["-Oglobal.experiment=", "hypot"], ["-Oglobal.quals=", "e17:prof"], ["-Oglobal.exp_sw=", "hypotcode"], ["-Osubmit.OS=", "SL7"], ["-Osubmit.N=", "10"], ["-Oglobal.nevents=", "10"], ["-Oglobal.first_run=", "200"], ["-Osubmit.tar_file_name=", ""]]
+param_overrides=[["-Oglobal.fclfile=", "gen.fcl"], ["-Oglobal.dest=", "/pnfs/%(experiment)s/scratch/users/%(experimenter)/%(version)s/generated"], ["-Oglobal.release=", "%(version)s"], ["-Oglobal.experiment=", "%(experiment)s"], ["-Oglobal.quals=", "e17:prof"], ["-Oglobal.exp_sw=", "hypotcode"], ["-Osubmit.OS=", "SL7"], ["-Osubmit.N=", "10"], ["-Oglobal.nevents=", "10"], ["-Oglobal.first_run=", "200"], ["-Osubmit.tar_file_name=", "dropbox:/nova/app/users/mengel/sample.tgz"]]
 
 [login_setup generic_analysis_launch]
 host=pomsgpvm01.fnal.gov
 account=poms_launcher
-setup=setup fife_utils
+setup=setup fife_utils -q analysis
 
 [job_type analysis_generator]
 launch_script=setup fife_utils -j  -g analysis; fife_launch -c $FIFE_UTILS_DIR/cfg/template_launch.cfg --stage=analysis_gen
