--- a/webservice/static/samples/analysis_processor.ini
+++ b/webservice/static/samples/analysis_processor.ini
@@ -19,7 +19,7 @@ job_type=generic_analysis_job
 
 [campaign_stage analyze]
 dataset_or_split_data=my_data_1
-param_overrides=[["-Oglobal.fclfile=", "reco.fcl"], ["-Oglobal.sam_dataset=", "%(dataset)s"], ["-Oglobal.dest=","/pnfs/%(experiment)s/scratch/users/%(experimenter)s/output"], ["-Oglobal.experiment=", "%(experiment)s"], ["-Oglobal.qualifiers=", ""], ["-Oglobal.release=", "%(version)s"], ["-Osubmit.n_files_per_job=", "1"], ["-Osubmit.OS=", "SL7"], ["-Oglobal.tarfile=","dropbox:/nova/app/users/mengel/sample.tgz"]]
+param_overrides=[["-Oglobal.fclfile=", "reco.fcl"], ["-Oglobal.sam_dataset=", "%(dataset)s"], ["-Oglobal.dest=","/pnfs/%(experiment)s/scratch/users/%(experimenter)s/output"], ["-Oglobal.experiment=", "%(experiment)s"], ["-Oglobal.qualifiers=", ""], ["-Oglobal.version=", "%(version)s"], ["-Osubmit.n_files_per_job=", "1"], ["-Osubmit.OS=", "SL7"], ["-Oglobal.tarfile=","dropbox:/nova/app/users/mengel/sample.tgz"]]
 
 [login_setup generic_analysis_launch]
 host=pomsgpvm01.fnal.gov
