--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,6 @@ packages = find:
 setup_requires = pytest-runner
 zip_safe = False
 install_requires = 
-    braceexpand
     psycopg2
     cherrypy
     sqlalchemy
@@ -20,7 +19,6 @@ install_requires =
     crontab
     futures
     requests
-    repoze.errorlog
     paste
     prometheus_client
     dogpile.cache
@@ -38,9 +36,19 @@ all =
 poms.webservice = 
     *.ini
     templates/*.html 
+    static/samples/*
     static/css/*.css 
     static/img/*png
     static/js/*.js
+poms.submission_broker= 
+    *.py
+poms.poms_client=
+    bin/*
+    python/*.py
+    test/*.py
+poms.test=
+    *.py
+    *.ini
 
 [options.packages.find]
 include =
