--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = poms
-version = v3_0_0
+version = v4_1_2
 description = Production Operations Management Service
 license = BSD 3-Clause License
 classifiers = 
@@ -19,10 +19,7 @@ install_requires =
     crontab
     futures
     requests
-    paste
     prometheus_client
-    dogpile.cache
-    dowser
 
 tests_require = 
     pytest 
@@ -40,9 +37,9 @@ poms.webservice =
     static/css/*.css 
     static/img/*png
     static/js/*.js
-poms.submission_broker= 
+poms.submission_broker = 
     *.py
-poms.poms_client=
+poms.poms_client =
     bin/*
     python/*.py
     test/*.py
@@ -53,9 +50,10 @@ poms.test=
 [options.packages.find]
 include =
    poms
-   poms.*
-exclude = 
-   poms.poms*
+   poms.poms_client
+   poms.submission_broker
+   poms.test
+   poms.webservice
   
 
 [aliases]
