setup.cfg fixes round3

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,8 +7,13 @@ classifiers =
 	Programming Language :: Python :: 2.7
 
 [options]
-#include_package_data = True
-packages = find:
+include_package_data = True
+packages = 
+   poms
+   poms.poms_client
+   poms.submission_broker
+   poms.test
+   poms.webservice
 setup_requires = pytest-runner
 zip_safe = False
 install_requires = 
@@ -26,10 +31,9 @@ tests_require =
     mock 
 
 [options.package_data]
-all = 
-   .version
-   *.cfg
-   *.ini
+poms=
+   *.py
+   setup.cfg
 poms.webservice = 
     *.ini
     templates/*.html 
@@ -47,13 +51,6 @@ poms.test=
     *.py
     *.ini
 
-[options.packages.find]
-include =
-   poms
-   poms.poms_client
-   poms.submission_broker
-   poms.test
-   poms.webservice
   
 
 [aliases]
