--- a/test/pytest.ini
+++ b/test/pytest.ini
@@ -1,5 +1,4 @@
 [pytest]
 testpaths = ../submission_broker ../webservice .
 #addopts = --doctest-modules --ignore=../webservice/uwsgi-service.py --ignore=test_dashboard.py
-addopts = --ignore=../webservice/uwsgi-service.py --ignore=test_dashboard.py --ignore=poms/* --ignore ../job_broker/poms_client/bin/test_pipe.py
-
+addopts = --ignore=../webservice/uwsgi-service.py --ignore=test_dashboard.py --ignore=poms/* --ignore ../job_broker/poms_client/bin/test_pipe.py --cov=../webservice --cov-config=.coveragerc
