change for issue #24412

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -39,17 +39,18 @@ elasticsearch_cert = %(HOME)s + "/.test_proxy"
 elasticsearch_key = %(HOME)s + "/.test_proxy"
 
 [Databases]
-# Dev
+## Production
+#db="pomsprd"
+#dbuser="pomsdbs"
+#dbhost="pomsdbgpvm01.fnal.gov"
+#dbport="5446"
+
+#Dev
 db="pomsdev"
 dbuser="pomsdbs"
 dbhost="ifdbdev.fnal.gov"
 dbport=5447
-## Production
-#db="pomsprd"
-#dbhost="ifdbprod.fnal.gov"
-#dbport=5446
-#dbuser="pomsdbs"
-#
+
 [POMS]
 log_level="DEBUG"      #CRITICAL, ERROR, WARNING, INFO (default), DEBUG, NOTSET
 ftsscandir= %(HOME)s + "private/var/ftsscanner"
