dev database move

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -48,7 +48,7 @@ elasticsearch_key = %(HOME)s + "/.test_proxy"
 #Dev
 db="pomsdev"
 dbuser="pomsdbs"
-dbhost="ifdbdev.fnal.gov"
+dbhost="ifdb07.fnal.gov"
 dbport=5447
 
 [POMS]
