smoke tested new mainline, need to test with poms submissions running next

--- a/submission_broker/submission_agent.cfg
+++ b/submission_broker/submission_agent.cfg
@@ -3,6 +3,8 @@ lens_host=landscape.fnal.gov
 poms_host=127.0.0.1:8080
 poms_uri=http://%(poms_host)s/poms/
 submission_uri=https://%(lens_host)s/lens/query
-full_query = {"query":"{submissions(group: \"%%s\" %%s){id pomsTaskID done running idle held failed completed } }","operationName":null}
+running_query = {"query":"{submissions(group: \"%%s\" %%s){pomsTaskID id} }","operationName":null}
+full_query    = {"query":"{submissions(group: \"%%s\" %%s){id pomsTaskID done running idle held failed completed } }","operationName":null}
 submission_project_query = {"query":"{submission(id:\"%%s\"){id SAM_PROJECT:env(name:\"SAM_PROJECT\")  SAM_PROJECT_NAME:env(name:\"SAM_PROJECT_NAME\")  args}}","operationName":null}
 submission_info_query = {"query":"{submission(id:\"%%s\"){id pomsTaskID done running idle held failed completed } }","operationName":null}
+poms_running_query=%(poms_uri)s/running_submissions?campaign_id_list=
