do not fall back to default user
* Return error if no username found in the request.
* Explicitely set username for local requests (cron jobs, etc)
* handle undefined ctx in error response template

--- a/submission_broker/submission_agent.cfg
+++ b/submission_broker/submission_agent.cfg
@@ -2,6 +2,8 @@
 lens_host=landscape.fnal.gov
 poms_host=127.0.0.1:8080
 poms_uri=http://%(poms_host)s/poms/
+poms_user=poms
+poms_user_header=X-Shib-Userid
 submission_uri=https://%(lens_host)s/lens/query
 running_query = {"query":"{submissions(group: \"%%s\" %%s){pomsTaskID id} }","operationName":null}
 full_query    = {"query":"{submissions(group: \"%%s\" %%s){id pomsTaskID done running idle held failed completed } }","operationName":null}
