moved launch commands to ini file, reference them using config parser instead of hard coded list
updated ini file and logic due to bad ini syntax

removed debug log

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -74,3 +74,8 @@ tools.sessions.locking: 'explicit'
 tools.staticdir.on = True
 # can we make this package relative?!?
 tools.staticdir.dir = %(POMS_DIR)s+"/webservice/static"
+
+
+[launch_commands]
+projre = "-e SAM_PROJECT=([^ ]*), -e SAM_PROJECT_NAME=([^ ]*), --sam_project[ =]([^ ]*), --project_name[ =]([^ ]*), --project[ =]([^ ]*)"
+
