--- a/webservice/static/samples/sample_split_merge.ini
+++ b/webservice/static/samples/sample_split_merge.ini
@@ -1,5 +1,5 @@
 [campaign]
-experiment=sample
+experiment=dune
 name=samples/sample_split_merge.ini
 campaign_stage_list=sample_split,sample_merge_triga,sample_merge_trigb,sample_merge_trigc,sample_merge_trigd,sample_merge_trige,sample_merge_trigf
 
@@ -14,6 +14,7 @@ login_setup=generic
 param_overrides=[["--stage=","split"]]
 completion_type=complete
 completion_pct=95
+default_clear_cronjob=True
 
 [campaign_stage sample_merge_triga]
 dataset_or_split_data=from_parent
@@ -25,6 +26,7 @@ login_setup=generic
 param_overrides=[["--stage=","merge"]]
 completion_type=complete
 completion_pct=95
+default_clear_cronjob=False
 
 [dependencies sample_merge_triga]
 campaign_stage_1=sample_split
@@ -41,6 +43,7 @@ login_setup=generic
 param_overrides=[["--stage=","merge"],["-Oglobal.sam_dataset=","%(dataset)s"]]
 completion_type=complete
 completion_pct=95
+default_clear_cronjob=False
 
 [dependencies sample_merge_trigb]
 campaign_stage_1=sample_split
@@ -57,6 +60,7 @@ login_setup=generic
 param_overrides=[["--stage=","merge"],["-Oglobal.sam_dataset=","%(dataset)s"]]
 completion_type=complete
 completion_pct=95
+default_clear_cronjob=True
 
 [dependencies sample_merge_trigc]
 campaign_stage_1=sample_split
@@ -73,6 +77,7 @@ login_setup=generic
 param_overrides=[["--stage=","merge"],["-Oglobal.sam_dataset=","%(dataset)s"]]
 completion_type=complete
 completion_pct=95
+default_clear_cronjob=False
 
 [dependencies sample_merge_trigd]
 campaign_stage_1=sample_split
@@ -89,6 +94,7 @@ login_setup=generic
 param_overrides=[["--stage=","merge"],["-Oglobal.sam_dataset=","%(dataset)s"]]
 completion_type=complete
 completion_pct=95
+default_clear_cronjob=True
 
 [dependencies sample_merge_trige]
 campaign_stage_1=sample_split
@@ -105,6 +111,7 @@ login_setup=generic
 param_overrides=[["--stage=","merge"],["-Oglobal.sam_dataset=","%(dataset)s"]]
 completion_type=complete
 completion_pct=95
+default_clear_cronjob=False
 
 [dependencies sample_merge_trigf]
 campaign_stage_1=sample_split
@@ -119,3 +126,4 @@ setup=export X509_USER_PROXY=/opt/%(experiment)spro/%(experiment)spro.Production
 launch_script=fife_launch -c $FIFE_UTILS_DIR/cfg/generic.cfg
 output_file_patterns=%%.root
 parameters=[]
+
