--- a/submission_broker/submission_agent.cfg
+++ b/submission_broker/submission_agent.cfg
@@ -6,7 +6,7 @@ poms_user=poms
 poms_user_header=X-Shib-Userid
 submission_uri=https://%(lens_host)s/lens/query
 running_query = {"query":"{submissions(group: \"%%s\" %%s){pomsTaskID id} }","operationName":null}
-full_query    = {"query":"{submissions(group: \"%%s\" %%s){id pomsTaskID done running idle held failed completed } }","operationName":null}
+full_query    = {"query":"{submissions(group: \"%%s\" %%s){id pomsTaskID done running idle held failed completed cancelled } }","operationName":null}
 submission_project_query = {"query":"{submission(id:\"%%s\"){id SAM_PROJECT:env(name:\"SAM_PROJECT\")  SAM_PROJECT_NAME:env(name:\"SAM_PROJECT_NAME\")  args}}","operationName":null}
-submission_info_query = {"query":"{submission(id:\"%%s\"){id pomsTaskID done running idle held failed completed } }","operationName":null}
+submission_info_query = {"query":"{submission(id:\"%%s\"){id pomsTaskID done running idle held failed completed cancelled } }","operationName":null}
 poms_running_query=%(poms_uri)s/running_submissions?campaign_id_list=
