--- a/setup.cfg
+++ b/setup.cfg
@@ -4,11 +4,13 @@ version = v4_1_2
 description = Production Operations Management Service
 license = BSD 3-Clause License
 classifiers = 
-	Programming Language :: Python :: 2.7
+	Programming Language :: Python :: 3.8
 
 [options]
 include_package_data = True
 packages = 
+   gssapi
+   gssapi.raw
    poms
    poms.poms_client
    poms.submission_broker
@@ -19,6 +21,7 @@ zip_safe = False
 install_requires = 
     psycopg2
     cherrypy
+    gssapi
     sqlalchemy
     jinja2
     crontab
@@ -53,8 +56,14 @@ poms.poms_client =
 poms.test=
     *.py
     *.ini
-
-  
+gssapi=
+   __init__.py
+   *.py
+   __pycache__/*.pyc
+gssapi.raw=
+   __init__.py
+   *.py
+   *.pyi
 
 [aliases]
 test=pytest
