Hotfixes for jobsub_lite

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -77,5 +77,5 @@ tools.staticdir.dir = %(POMS_DIR)s+"/webservice/static"
 
 
 [launch_commands]
-projre = "-e SAM_PROJECT=([^ ]*), -e SAM_PROJECT_NAME=([^ ]*), --sam_project[ =]([^ ]*), --project_name[ =]([^ ]*), --project[ =]([^ ]*)"
+projre = "-e SAM_PROJECT=([^ ]*), -e SAM_PROJECT_NAME=([^ ]*), --sam_project[ =]([^ ]*), --project_name[ =]([^ ]*),--project-name[ =]([^ ]*), --project[ =]([^ ]*)"
 
