Temp remove submission lock for processing completed submissions

--- a/ups/supervisord.conf
+++ b/ups/supervisord.conf
@@ -18,6 +18,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
 serverurl=unix:///home/poms/private/logs/supervisor/supervisor.sock ; use a unix:// URL  for a unix socket
+port = 127.0.0.1:8080
 
 [program:poms_webservice]
 directory=/home/poms/products/poms/current/webservice
