--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,10 @@ CVS
 poms.dbs
 *.swp
 *.ini
-*.cfg
+/poms_client/bin/client.cfg
+/submission_broker/submission_agent.cfg
 *.conf
+/poms_config
 /test/data/*
 poms.egg-info/
 tmp
