--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,9 @@ CVS
 poms.dbs
 *.swp
 *.ini
-*.cfg
+/poms_client/bin/setup.cfg
+/submission_broker/submission_agent.cfg
+/poms_config
 *.conf
 /test/data/*
 poms.egg-info/
