Fixed syntax error on poms_model column definition for experimenters watching. This syntax error is ignored in on our nodes, but shows itself within a container.

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ poms.dbs
 *.swp
 *.ini
 /poms_client/bin/setup.cfg
+/poms_client/bin/client.cfg
 /submission_broker/submission_agent.cfg
 /poms_config
 *.conf
