Data dispatcher test page now has the ability to log in with username/password, vaulttokens (if stored on poms filesystem, and enabled enabled on metacat server), and existing metacat tokens.
Data dispatcher sessions are acquired via context (experiment, role, user) and automatically logged in if a metacat token exists.

The page has the ability to load and view rse's, projects, and project handles.

All UI related stuff is scalable and will be separated into several Jinja2 templates for easy insertion into other pages as development progresses. I have also created separate files for all js and css related to data dispatcher. This will allow easy imports on pages where data_dispatcher views are prefered over our classic views.

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ CVS
 *.diff
 poms.dbs
 *.swp
-*.ini
+/webservice/poms.ini
 /poms_client/bin/setup.cfg
 /poms_client/bin/client.cfg
 /submission_broker/submission_agent.cfg
