Cleaned up UI, added stability and compatibility between sam and data_dispatcher handling.
Displays information about dd project submissions on relevant pages, generates queries for relevant files.

Renamed DataDispatcherService to DMRService because it makes more sense.

Fetches jobsub id from submission table if it exists (captured using standard submission method).

DMRService added to cherrypy.request rather than as a ctx field. This makes it easier and faster to acquire.

Standard login is as poms by an existing token, otherwise it automatically attempts to log in via x509 certs, which refreshes the token for 7 days.

--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,8 @@ poms.dbs
 poms.egg-info/
 tmp
 .DS_Store
+.data_dispatcher_worker_id
 __pycache__
 fife_wrap.py
+fife_wrap
+submission_broker/submission_broker_uwsgi.ini
