--- a/submission_broker/config/submission_agent.cfg
+++ b/submission_broker/config/submission_agent.cfg
@@ -15,16 +15,16 @@ poms_user=poms
 poms_user_header=X-Shib-Userid
 submission_uri=https://%(lens_host)s/lens/query
 lens_server="https://landscape.fnal.gov"
-running_query = {"query":"{submissions(group: \"%%s\" %%s){pomsTaskID id POMS_DATA_DISPATCHER_PROJECT_ID:env(name:\"POMS_DATA_DISPATCHER_PROJECT_ID\")}}","operationName":null}
+running_query = {"query":"{submissions(group: \"%%s\" %%s){pomsTaskID id POMS_DATA_DISPATCHER_PROJECT_ID:env(name:\"POMS_DATA_DISPATCHER_PROJECT_ID\") POMS_DATA_DISPATCHER_TASK_ID:env(name:\"POMS_DATA_DISPATCHER_TASK_ID\")}}","operationName":null}
 full_query    = {"query":"{submissions(group: \"%%s\" %%s){id pomsTaskID done running idle held failed completed cancelled } }","operationName":null}
 submission_project_query = {"query":"{submission(id:\"%%s\"){id SAM_PROJECT:env(name:\"SAM_PROJECT\") SAM_PROJECT_NAME:env(name:\"SAM_PROJECT_NAME\")   args}}","operationName":null}
 submission_info_query = {"query":"{submission(id:\"%%s\"){id pomsTaskID POMS_ENV:env(name:\"POMS_ENV\") done running idle held failed completed cancelled } }","operationName":null}
-append_submission_sid = submission(pomsTaskID:%%s){pomsTaskID id done error running idle held failed completed cancelled args POMS_ENV:env(name:\"POMS_ENV\") POMS_DATA_DISPATCHER_PROJECT_ID:env(name:\"POMS_DATA_DISPATCHER_PROJECT_ID\")}
-append_submission_jid = submission(id:\"%%s\"){pomsTaskID id done error running idle held failed completed cancelled args POMS_ENV:env(name:\"POMS_ENV\") POMS_DATA_DISPATCHER_PROJECT_ID:env(name:\"POMS_DATA_DISPATCHER_PROJECT_ID\")}
-append_job = job(id:\"%%s\"){ id status done error pomsTaskID SAM_PROJECT:env(name:\"SAM_PROJECT\") args SAM_PROJECT_NAME:env(name:\"SAM_PROJECT_NAME\") POMS_DATA_DISPATCHER_PROJECT_ID:env(name: \"POMS_DATA_DISPATCHER_PROJECT_ID\")}
+append_submission_sid = submission(pomsTaskID:%%s){pomsTaskID id done error running idle held failed completed cancelled args POMS_ENV:env(name:\"POMS_ENV\") POMS_DATA_DISPATCHER_PROJECT_ID:env(name:\"POMS_DATA_DISPATCHER_PROJECT_ID\") POMS_DATA_DISPATCHER_TASK_ID:env(name:\"POMS_DATA_DISPATCHER_TASK_ID\")}
+append_submission_jid = submission(id:\"%%s\"){pomsTaskID id done error running idle held failed completed cancelled args POMS_ENV:env(name:\"POMS_ENV\") POMS_DATA_DISPATCHER_PROJECT_ID:env(name:\"POMS_DATA_DISPATCHER_PROJECT_ID\") POMS_DATA_DISPATCHER_TASK_ID:env(name:\"POMS_DATA_DISPATCHER_TASK_ID\")}
+append_job = job(id:\"%%s\"){ id status done error pomsTaskID SAM_PROJECT:env(name:\"SAM_PROJECT\") args SAM_PROJECT_NAME:env(name:\"SAM_PROJECT_NAME\") POMS_DATA_DISPATCHER_PROJECT_ID:env(name:\"POMS_DATA_DISPATCHER_PROJECT_ID\") POMS_DATA_DISPATCHER_TASK_ID:env(name:\"POMS_DATA_DISPATCHER_TASK_ID\")}
 all_jobs_query_base = {"query": "{%%s}"}
 poms_running_query=%(poms_uri)s/running_submissions?campaign_id_list=
-poms_dd_complete_query_one=%(poms_uri)s/calculate_dd_project_completion?project_id=
-poms_dd_complete_query_all=%(poms_uri)s/calculate_dd_project_completion?project_ids=%%s
+poms_dd_complete_query_one=%(poms_uri)s/calculate_dd_project_completion?dd_submission=
+poms_dd_complete_query_all=%(poms_uri)s/calculate_dd_project_completion?dd_submissions=%%s
 poms_env="dev"
 
