* updated jobsub wrapper to fetch correct url * data dispatcher and metacat client moved to cherrypy session * UI Updates * Optimized campaign stage submissions for data dispatcher, so we only query unique queries, and uses db joins instead of relationships to fetch all necessary stage data at once, rather than 1 stage at a time.

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ bin/db_equalizer.py
 bin/db_equalizing_script.sql
 documentation
 
+webservice/config/shrek.toml
+config/shrek/dune-data-dispatcher.sh
+test/set_hypot_config_shrek
