--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,10 @@ documentation
 webservice/config/shrek.toml
 config/shrek/dune-data-dispatcher.sh
 test/set_hypot_config_shrek
+tmp/*
+submission_broker/records/queue.json
+submission_broker/records/results.json
+submission_broker/records/results.json.lock
+submission_broker/records/queue.json.lock
+submission_broker/config/old/submission_agent.cfg
+submission_broker/config/*
