--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,14 @@ tmp
 __pycache__
 alma9_setup
 fife_wrap.py
+bin/db_equalizer.py
+bin/db_equalizing_script.sql
+config/shrek/dune-data-dispatcher.sh
+submission_broker/config/submission_agent.cfg
+submission_broker/config/old/submission_agent.cfg
+submission_broker/records/queue.json
+submission_broker/records/queue.json.lock
+submission_broker/records/results.json
+submission_broker/records/results.json.lock
+test/set_hypot_config_shrek
+webservice/config/shrek.toml
